# PyProma

./: .gitignore  CONTRIBUTING.md  README.md  RUN_ME_FIRST.py  git_commit_test.py  pyproject.toml  pyprom_dirview.py  pyprom_projectview.py  requirements.txt
PyProm_GUI/: PyProm_GUI_main.py
PyProm_GUI/PyProm_dirview/: pyprom_dirview.py
PyProm_GUI/PyProm_dirview/tabs/: git_tab.py  packages_tab.py  readme_tab.py  todo_tab.py
PyProm_GUI/PyProm_projectview/: pyprom_projectview.py
PyProm_GUI/PyProm_projectview/tabs/: calendar_tab.py
PyProm_GUI/PyProm_templates/: tab_template.py
PyProm_Scripts/: pyprom_dirview.py  pyprom_projectview.py
PyProma/PyProma_GUI/: PyProma_GUI_main.py
PyProma/PyProma_GUI/PyProma_common/: show_version.py
PyProma/PyProma_GUI/PyProma_dir_view/: PyProma_dir_view_script.py
PyProma/PyProma_GUI/PyProma_project_view/: PyProma_project_view_script.py
PyProma_GUI/: PyProm_GUI_main.py  PyProma_GUI_main.py
PyProma_GUI/PyProma_common/: code_runner.py  show_version.py
PyProma_GUI/PyProma_common/PyProma_templates/: menu_template.py  tab_template.py
PyProma_GUI/PyProma_common/tests/: tab_test.py
PyProma_GUI/PyProma_dir_view/: PyProma_dir_view.py  PyProma_dir_view_script.py
PyProma_GUI/PyProma_dir_view/menus/: venv_menu.py
PyProma_GUI/PyProma_dir_view/plugins/: IDE_plugin.py  git_plugin.py  linter_plugin.py  (+6 more)
PyProma_GUI/PyProma_dirview/: pyproma_dirview.py
PyProma_GUI/PyProma_project_view/: PyProma_project_view.py  PyProma_project_view_script.py
PyProma_GUI/PyProma_projectview/: pyprom_projectview.py  pyproma_projectview.py
(+32 files in other folders)
