[tool.poetry]
name = "PyProma"
version = "0.2.5"
description = "This is a package of project manager"
authors = ["rikeidanshi <rikeidanshi@duck.com>"]
readme = "README.md"
license = "GNU LESSER GENERAL PUBLIC LICENSE Version 2.1"

[tool.poetry.dependencies]
python = "^3.10"
arrow = "1.3.0"
binaryornot = "0.4.4"
certifi = "2024.7.4"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
cookiecutter = "2.6.0"
gitdb = "4.0.11"
gitpython = "3.1.43"
idna = "3.7"
jinja2 = "3.1.6"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
mdurl = "0.1.2"
pyasn1 = "0.6.0"
pygments = "2.18.0"
pyperclip = "1.9.0"
python-dateutil = "2.9.0.post0"
python-slugify = "8.0.4"
pyyaml = "6.0.1"
requests = "2.32.4"
rich = "13.7.1"
rsa = "4.9"
six = "1.16.0"
smmap = "5.0.1"
text-unidecode = "1.3"
types-python-dateutil = "2.9.0.20240316"
urllib3 = "2.5.0"
pip-licenses = "^5.0.0"
toml = "^0.10.2"
inflection = "^0.5.1"
flake8 = "^7.1.1"
isort = "^5.13.2"
pylint = "^3.2.7"
send2trash = "^1.8.3"
markdown = "^3.7"
nuitka = "^2.4.8"
tkhtmlview = "^0.3.1"
pygithub = "^2.5.0"
azure-devops = "^7.1.0b4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
